--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
 <body>
 
-<!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQE8GtxCBfHkXQ/profile-displayphoto-shrink_100_100/0/1650653347648?e=1658361600&v=beta&t=hPHJyDyiel1QfuRP1lcAnAKQ4-U8x-AJ4QsuxoCMJhU" alt=" Noorullah Profile Picture"> -->
-<table cellspacing="20px">
   <tr>
-    <td><img src="Image\Noorullah_image.png" height="150px" width="150px" alt="Error 404"></td>
+    <td><img src="CV/Image/Noorullah_image.png" height="150px" width="150px" alt="Error 404"></td>
     <td>  <h1>Noorullah Ahamad</h1>
       <p><em>Basic Programmer of <strong>C++/C</strong> and experince with <strong>Web Development <a href="https://noorahamad12300.wixsite.com/robox" target="_blank">(Noor-editor)</a> </strong>.</em></p>
       <p>I am student of UIET, Kanpur <a href="http://csjmu.ac.in/" target="_blank">(CSJMU,Kanpur)</a> of <i> CSE Department </i>.Currently i am in 2nd semester.<br>I start programming after completed
