--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
  <h3>For Content Me:</h3>
  <strong>
    <li>
-     <a href="C:\Users\NOORULLAH\Desktop\web_development_Anglena\HTML-Personal Site\input.html" target="_blank"> Fill the form</a>
+     <a href="CV\input.html" target="_blank"> Fill the form</a>
    </li>
  </strong>
  <hr>
     <ul>
-      <li><strong><a href="C:\Users\NOORULLAH\Desktop\web_development_Anglena\HTML-Personal Site\Content-me.html" target="_blank">Content-Me</a></strong> </li>
+      <li><strong><a href="CV\Content-me.html" target="_blank">Content-Me</a></strong> </li>
     </ul>
 
 </body>
