--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <tr>
-    <td><img src="CV/Image/Noorullah_image.png" height="150px" width="150px" alt="Error 404"></td>
+    <td><img src="Image/Noorullah_image.png" height="150px" width="150px" alt="Error 404"></td>
     <td>  <h1>Noorullah Ahamad</h1>
       <p><em>Basic Programmer of <strong>C++/C</strong> and experince with <strong>Web Development <a href="https://noorahamad12300.wixsite.com/robox" target="_blank">(Noor-editor)</a> </strong>.</em></p>
       <p>I am student of UIET, Kanpur <a href="http://csjmu.ac.in/" target="_blank">(CSJMU,Kanpur)</a> of <i> CSE Department </i>.Currently i am in 2nd semester.<br>I start programming after completed
@@ -84,12 +84,12 @@
  <h3>For Content Me:</h3>
  <strong>
    <li>
-     <a href="CV\input.html" target="_blank"> Fill the form</a>
+     <a href="input.html" target="_blank"> Fill the form</a>
    </li>
  </strong>
  <hr>
     <ul>
-      <li><strong><a href="CV\Content-me.html" target="_blank">Content-Me</a></strong> </li>
+      <li><strong><a href="Content-me.html" target="_blank">Content-Me</a></strong> </li>
     </ul>
 
 </body>
