--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <tr>
-    <td><img src="Image/Noorullah_image.png" height="150px" width="150px" alt="Error 404"></td>
+    <td><img src="Image/Noorullah_image.png" height="150px" width="150px" alt="Error 404(Image can't Upload)"></td>
     <td>  <h1>Noorullah Ahamad</h1>
       <p><em>Basic Programmer of <strong>C++/C</strong> and experince with <strong>Web Development <a href="https://noorahamad12300.wixsite.com/robox" target="_blank">(Noor-editor)</a> </strong>.</em></p>
       <p>I am student of UIET, Kanpur <a href="http://csjmu.ac.in/" target="_blank">(CSJMU,Kanpur)</a> of <i> CSE Department </i>.Currently i am in 2nd semester.<br>I start programming after completed
