--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
  </strong>
  <hr>
     <ul>
-      <li><strong><a href="Content-me.html" target="_blank">Content-Me</a></strong> </li>
+      <li><strong><a href="Content-me.html" target="_blank">Contact-Me</a></strong> </li>
     </ul>
 
 </body>
